packages/tabs/src/tabs.pcss
.sds-tabs {
  --tab-list-border-bottom: var(--sds-space-border-weight-regular);
  --tab-hover-background-color: var(
    --sds-color-interaction-neutral-transparent-highlight
  );
  --tab-active-background-color: var(
    --sds-color-interaction-neutral-transparent-pressed
  );

  &__tab-list {
    border-bottom: var(--tab-list-border-bottom) solid
      var(--sds-color-layout-divider-subtle);
    display: flex;
    margin-bottom: var(--sds-space-gap-small);
  }

  &__tab {
    align-items: center;
    border: 0 none;
    border-bottom: var(--sds-space-border-weight-bold) solid transparent;
    color: var(--sds-color-text-primary);
    display: flex;
    gap: var(--sds-space-gap-tiny);
    font-size: var(--sds-typography-label-l-fontsize);
    font-weight: var(--sds-typography-label-l-fontweight);
    line-height: var(--sds-typography-label-l-lineheight);
    padding: var(--sds-space-padding-medium) var(--sds-space-padding-small);
    margin-bottom: calc(var(--tab-list-border-bottom) * -1);

    &-icon {
      align-items: center;
      display: flex;
      font-size: var(--sds-typography-fontsize-700);
      justify-content: center;
    }

    &-badge {
      margin: -1px 0;
    }

    &[aria-selected="true"] {
      border-color: var(--sds-color-interaction-primary-strong-default);
    }

    &:hover,
    &:focus-visible {
      background-color: var(--tab-hover-background-color);
    }

    &:active {
      background-color: var(--tab-active-background-color);
      border-color: var(--sds-color-interaction-primary-strong-pressed);
    }

    &:focus-visible {
      outline: var(--sds-focus-outline);
    }
  }

  &__tab-panel {
    &:focus-visible {
      outline: var(--sds-focus-outline);
    }
  }
}

